<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tbl1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >
    
    <TableRow>
        
        <TextView
            android:id="@+id/tv1"
            android:layout_column="1"
            android:text="@string/place"   
            android:layout_weight="1"
            android:layout_width="0px"
            android:textAppearance="?android:attr/textAppearanceMedium"/>
               
        <TextView
            android:id="@+id/tv2"
            android:layout_column="2"
            android:text="@string/player"   
            android:layout_weight="3"
            android:layout_width="0px"
            android:textAppearance="?android:attr/textAppearanceMedium"/>
        <TextView
            android:id="@+id/tv3"
            android:layout_column="3"
            android:text="@string/highscore"
            android:layout_weight="3"
            android:layout_width="0px"
            android:textAppearance="?android:attr/textAppearanceMedium"/>
    </TableRow>


</TableLayout>