<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">

<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" android:baselineAligned="false">

    <RelativeLayout
        android:id="@+id/relative_layout_splash"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.29" >

        <TextView
            android:id="@+id/tv_pref_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/your_name"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <ProgressBar
            android:id="@+id/progressbar"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true" />

        <TextView
            android:id="@+id/tv_pref_radius"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/progressbar"
            android:layout_marginBottom="25dp"
            android:layout_toRightOf="@+id/tv_pref_name"
            android:text="@string/preferred_radius"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/tv_others_found"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_marginBottom="66dp"
            android:layout_marginLeft="30dp"
            android:text="@string/others_found"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Chronometer
            android:id="@+id/tv_timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/tv_pref_name"
            android:layout_alignParentRight="true" />

    </RelativeLayout>

</LinearLayout>

</merge>